--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.0.0",
     "@types/jest": "^29.5.12",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "msw": "^2.3.5"
   }
 }
